<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="#F8F8FF"

    tools:context=".Programming">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/programmingprofile3"/>

            <TextView
                android:padding="10dp"
                android:textColor="#3b3939"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/holo_red_dark"
                android:text="@string/textschool"


                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/booklist"
                    android:textColor="#353232"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="#131212"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:text="@string/Price"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C1"
                    android:textColor="#2e2c2c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subin2"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="213"
                    android:textColor="#302d2d"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:textColor="#212020"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/schoolbook1"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C2"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/Schaums1"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T2"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="204"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/schoolbook2"  />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programming3"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="213"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/programmingbook3"

                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programming4"
                    android:textStyle="bold"


                    />

                <TextView
                    android:id="@+id/T4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="213"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/programmingbook4"

                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programming5"
                    android:textStyle="bold
"


                    />


                <TextView
                    android:id="@+id/T5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="213"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/programmingbook5"

                />






        </LinearLayout>






    </ScrollView>


</LinearLayout>