<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#148e73"
    tools:context=".Medical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/medical"/>

            <TextView
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/holo_red_dark"
                android:text="@string/textschool"


                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/booklist"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginBottom="10dp"
                    android:text="@string/Price"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medibook1"
                    android:textStyle="bold"
                    android:layout_marginRight="90dp"


                    />

                <TextView
                    android:id="@+id/T1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="1350"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/medi1"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C2"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/medibook2"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T2"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="2520"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/medi2"  />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medibook3"
                    android:textStyle="bold
"
                    android:layout_marginRight="50dp"

                    />

                <TextView
                    android:id="@+id/T3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="552"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/medi3"

                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C4"
                    android:layout_marginRight="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medibook4"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="2115"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/medi4"

                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/C5"
                    android:layout_marginRight="90dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medibook5"
                    android:textStyle="bold
"


                    />

                <TextView
                    android:id="@+id/T5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="1260"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />

            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:padding="40dp"
                android:src="@drawable/medi5"

                />






        </LinearLayout>






    </ScrollView>


</LinearLayout>